--- a/css/manager.css
+++ b/css/manager.css
@@ -20,7 +20,10 @@
 .repair_list_manager .wrapper .list li .infoCon{ padding:0 0.25rem; color:#999; }
 .repair_list_manager .wrapper .list li .infoCon .info{ border-bottom:1px solid #e8e8e8; }
 .repair_list_manager .wrapper .list li .infoCon .info p{ margin:0.2rem 0; }
+.repair_list_manager .wrapper .list li .infoCon .info p .name:before{ font:0.27rem/0.27rem 'iconfont'; content:'\e696'; margin-right:0.15rem;}
 .repair_list_manager .wrapper .list li .infoCon .info p .phone{ float:right; }
+.repair_list_manager .wrapper .list li .infoCon .info p .phone:before{  font:0.27rem/0.27rem 'iconfont'; content:'\e601'; margin-right:0.15rem;}
+.repair_list_manager .wrapper .list li .infoCon .info p .addr:before{  font:0.27rem/0.27rem 'iconfont'; content:'\e690'; margin-right:0.15rem; }
 .repair_list_manager .wrapper .list li .infoCon .details{ padding:0.35rem 0; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; padding-right:0.8rem; color:#999; }
 
 
@@ -29,11 +32,21 @@
 .repair_details_manager .topbar{  background:#fff; font-size:0.27rem; top:0;}
 .repair_details_manager .topbar p{ padding:0.2rem 0.25rem; }
 .repair_details_manager .topbar p .name{ margin-left:0.5rem; color:#999;}
+.repair_details_manager .topbar p .label:before{ font:0.27rem/0.27rem 'iconfont'; content:'\e696'; margin-right:0.15rem; color:#EEB125;}
 .repair_details_manager .topbar p .time{ float:right; color:#999; }
+.repair_details_manager .topbar p .time:before{ font:0.27rem/0.27rem 'iconfont'; content:'\e659'; margin-right:0.15rem; color:#EEB125;}
+
+
+.repair_details_manager .wrapper .slideBtn:after{ font:0.27rem/0.27rem 'iconfont'; content:'\e638'; margin-right:0.15rem; margin-left:0.15rem;}
+.repair_details_manager .wrapper .slideBtn.down:after{ content:'\e621'; }
 
 .repair_details_manager .wrapper .main .infoCon{ background:#fff; padding:0.1rem 0.25rem; margin-top:0.15rem; }
-.repair_details_manager .wrapper .main .infoCon p{ margin:0.22rem 0; padding-left:1.5rem; }
-.repair_details_manager .wrapper .main .infoCon p > label{ position:absolute; left:0.25rem; font-size:0.27rem; }
+.repair_details_manager .wrapper .main .infoCon p{ margin:0.25rem 0; padding-left:1.8rem; position:relative; }
+.repair_details_manager .wrapper .main .infoCon p > label{ position:absolute; left:0rem; font-size:0.27rem; top:-3px;}
+.repair_details_manager .wrapper .main .infoCon p.phone label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e611'; margin-right:0.15rem; color:#999; }
+.repair_details_manager .wrapper .main .infoCon p.addr label:before{ font:0.27rem/0.27rem 'iconfont'; content:'\e62a'; margin-right:0.15rem; color:#999;  }
+.repair_details_manager .wrapper .main .infoCon p.type label:before{ font:0.27rem/0.27rem 'iconfont'; content:'\e643'; margin-right:0.15rem; color:#999; }
+.repair_details_manager .wrapper .main .infoCon p.category label:before{ font:0.27rem/0.27rem 'iconfont'; content:'\e649'; margin-right:0.15rem; color:#999; }
 .repair_details_manager .wrapper .main .infoCon p .text{ color:#999; }
 .repair_details_manager .wrapper .main .stateCon{ background:#fff; margin-top:0.15rem; }
 .repair_details_manager .wrapper .main .stateCon p > label{ font-size:0.28rem; }
@@ -41,27 +54,88 @@
 .repair_details_manager .wrapper .main .stateCon .title .state{ float:right; color:#91D69C;}
 .repair_details_manager .wrapper .main .stateCon .details{ padding:0.1rem 0.25rem; }
 .repair_details_manager .wrapper .main .stateCon .details p { padding:0.1rem 0; }
-.repair_details_manager .wrapper .main .stateCon .details p .slideBtn{ float:right; padding-right:0.4rem; color:#777; }
+.repair_details_manager .wrapper .main .stateCon .details p .slideBtn{ float:right; color:#777; }
 .repair_details_manager .wrapper .main .stateCon .slideCon{ padding-bottom:0.15rem; }
 .repair_details_manager .wrapper .main .stateCon .slideCon p{ color:#999; margin-bottom:0.6rem; }
 .repair_details_manager .wrapper .main .commentCon{ background:#fff; margin-top:0.15rem; }
 .repair_details_manager .wrapper .main .commentCon > p{ padding:0.2rem 0.25rem; border-bottom:1px solid #e8e8e8;}
 .repair_details_manager .wrapper .main .commentCon > p > label{ font-size:0.28rem;>   }
-.repair_details_manager .wrapper .main .commentCon > p .slideBtn{ float:right; padding-right:0.4rem; color:#777; }
+.repair_details_manager .wrapper .main .commentCon > p .slideBtn{ float:right; color:#777; }
 .repair_details_manager .wrapper .main .commentCon .slideCon{ padding-bottom:0.15rem; }
 .repair_details_manager .wrapper .main .commentCon .slideCon .commentList li{ position:relative; padding:0.25rem 0.25rem 0.25rem 1.2rem; }
 .repair_details_manager .wrapper .main .commentCon .slideCon .commentList li img.avatar{ position:absolute; height:0.7rem; width:0.7rem; left:0.25rem; }
 .repair_details_manager .wrapper .main .commentCon .slideCon .commentList li .name{ margin-bottom:0.1rem; }
 .repair_details_manager .wrapper .main .commentCon .slideCon .commentList li .text{ color:#777; margin-bottom:0.3rem; }
+.repair_details_manager .wrapper .main .commentCon .slideCon .commentList li .imgCon{ font-size:0; }
 .repair_details_manager .wrapper .main .commentCon .slideCon .commentList li .imgCon img{ height:1.5rem; width:1.5rem; margin:0 0.15rem 0.15rem 0; }
 .repair_details_manager .wrapper .main .commentCon .slideCon .commentList li .time{ color:#999;border-bottom:1px solid #e8e8e8; padding:0.2rem 0; }
 .repair_details_manager .wrapper .main .commentAdd{ background:#fff; margin-top:0.15rem; padding:0.25rem;  }
 .repair_details_manager .wrapper .main .commentAdd .commentBtn{ border:1px solid #e8e8e8; display:block; padding:0.1rem 0.25rem; color:#999; border-radius:8px;}
+.repair_details_manager .wrapper .main .evaluation { background:#fff; margin-top:0.15rem; padding:0 0.25rem 0.5rem 0.25rem;  }
+.repair_details_manager .wrapper .main .evaluation > p{  padding:0.3rem 0; }
+.repair_details_manager .wrapper .main .evaluation > p label{ font-size:0.28rem; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent .total { text-align:center; padding:0 1.3rem 0.15rem 1.3rem; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent .total p{ border:1px solid #e8e8e8; padding:0.2rem 0; font-size:0.28rem; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent .total p .type{ color:#CB2939; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent ul.category{ padding:0.25rem; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent ul.category li{ padding:0.15rem 0; font-size:0.27rem; color:#444;}
+.repair_details_manager .wrapper .main .evaluation .evaluationContent ul.category li .star { margin-left:0.2rem; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent ul.category li .star .icon{ position:relative; display:inline-block; margin-left:0.15rem; width:0.27rem;}
+.repair_details_manager .wrapper .main .evaluation .evaluationContent ul.category li .star .icon:after{ position:absolute; top:-0.14rem; font:0.30rem/0.0rem 'iconfont'; content:'\e641';  color:#999;}
+.repair_details_manager .wrapper .main .evaluation .evaluationContent ul.category li .star .icon.active:after{ color:#EEB125; }
+.repair_details_manager .wrapper .main .evaluation .evaluationContent .content{ background:#f7f7f7; border:1px solid #e8e8e8; border-radius:8px; padding:0.15rem; height:2rem; color:#999;}
+.repair_details_manager .wrapper .main .evaluation .empty{ padding:0.3rem; text-align:center; font-size:0.3rem; color:#999; }
 
 
 /*===============发布评论=================*/
-.comment_form_manager{ padding-top:0.9rem; }
-.comment_form_manager .topbar{ background:#fff; top:0; }
-.comment_form_manager .topbar .hd-title{ font-size:0.31rem; padding:0.2rem 0.25rem; text-align:center; }
-.comment_form_manager .topbar a.cancelBtn{ font-size:0.27rem; float:left; }
-.comment_form_manager .topbar a.confirmBtn{ font-size:0.27rem; float:right; color:#EEB125;}
+.comment_form_manager .wrapper .bar{ background:#fff; box-sizing:border-box; position:relative; }
+.comment_form_manager .wrapper .bar:after{ display:block; content:""; width:100%; height:1px; position:absolute; left:0; bottom:0; z-index:5; background:#ddd; -webkit-transform:scale(1,0.5); }
+
+.comment_form_manager .wrapper .bar .hd-title{ font-size:0.31rem; padding:0.2rem 0.25rem; text-align:center; }
+.comment_form_manager .wrapper .bar a:active{ opacity:0.6; }
+.comment_form_manager .wrapper .bar a.cancelBtn{ font-size:0.27rem; float:left; }
+.comment_form_manager .wrapper .bar a.confirmBtn{ font-size:0.27rem; float:right; color:#EEB125;}
+
+.comment_form_manager .wrapper .form{ background:#fff; padding:0.2rem; }
+.comment_form_manager .wrapper .form textarea{ padding:0.2rem; width:100%; height:2.8rem; color:#999;}
+.comment_form_manager .wrapper .form .imgCon{ font-size:0; }
+.comment_form_manager .wrapper .form .imgCon img{ height:1.4rem; width:1.4rem; margin:0 0.15rem 0.15rem 0;}
+.comment_form_manager .wrapper .form .btnCon{ padding:0.5rem 0 0.3rem 0; }
+.comment_form_manager .wrapper .form .btnCon .commentBtn{ display:block; position:relative; }
+.comment_form_manager .wrapper .form .commentBtn .set_contentText{ opacity:0; position:absolute; display:block; width:100%; top:0; left:0;}
+.comment_form_manager .wrapper .form .commentBtn .set_contentText option{  display:block; }
+
+
+/*===============发起报修=================*/
+.repair_add_manager .wrapper{ padding-bottom:1.1rem; }
+.repair_add_manager .wrapper .form .infoCon > p{ padding:0 0.25rem; background:#fff;  padding-left:2rem;}
+.repair_add_manager .wrapper .form .infoCon > p.username{ margin-bottom:0.15rem; }
+.repair_add_manager .wrapper .form .infoCon > p.username label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e696'; margin-right:0.15rem; color:#999; }
+.repair_add_manager .wrapper .form .infoCon > p.contact label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e611'; margin-right:0.15rem; color:#999; }
+.repair_add_manager .wrapper .form .infoCon > p.phone label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e611'; margin-right:0.15rem; color:#999; }
+.repair_add_manager .wrapper .form .infoCon > p.addr label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e62a'; margin-right:0.15rem; color:#999; }
+.repair_add_manager .wrapper .form .infoCon > p.type label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e643'; margin-right:0.15rem; color:#999; }
+.repair_add_manager .wrapper .form .infoCon > p.category label:before{ font:0.30rem/0.27rem 'iconfont'; content:'\e649'; margin-right:0.15rem; color:#999; }
+
+
+.repair_add_manager .wrapper .form .infoCon > p label{ position:absolute; padding:0.25rem 0; left:0.25rem; font-size:0.27rem; }
+.repair_add_manager .wrapper .form .infoCon > p input{ display:inline-block; width:100%; padding:0.25rem 0; border-bottom:1px solid #e8e8e8; color:#999;}
+.repair_add_manager .wrapper .form .infoCon > p select{ display:inline-block; width:100%; padding:0.25rem 0; border-bottom:1px solid #e8e8e8; color:#999;}
+.repair_add_manager .wrapper .form .infoCon > p a{ display:inline-block; width:100%; padding:0.25rem 0; border-bottom:1px solid #e8e8e8; color:#999;}
+.repair_add_manager .wrapper .form .infoCon > p:first-child input{ border:none; }
+.repair_add_manager .wrapper .form .infoCon > p:last-child select{ border:none; }
+.repair_add_manager .wrapper .form .details{ padding:0.1rem 0.25rem; margin-top:0.15rem; background:#fff; }
+.repair_add_manager .wrapper .form .details p { padding:0.1rem 0; font-size:0.28rem; }
+.repair_add_manager .wrapper .form .details textarea{ padding:0.2rem; width:100%; height:2.8rem; color:#999;}
+.repair_add_manager .wrapper .form .details .imgCon{ font-size:0; padding-bottom:0.1rem;}
+.repair_add_manager .wrapper .form .details .imgCon img{ height:1.4rem; width:1.4rem; margin:0 0.15rem 0.15rem 0;}
+
+
+/*===============选择地址=================*/
+.repair_addr_manager .wrapper{ padding-bottom:1.1rem; }
+.repair_addr_manager .wrapper .form .infoCon > p{ padding:0 0.25rem; background:#fff;  padding-left:1.6rem;}
+.repair_addr_manager .wrapper .form .infoCon > p label{ position:absolute; padding:0.25rem 0; left:0.25rem; font-size:0.27rem; }
+.repair_addr_manager .wrapper .form .infoCon > p input{ display:inline-block; width:100%; padding:0.25rem 0; border-bottom:1px solid #e8e8e8; color:#999;}
+.repair_addr_manager .wrapper .form .infoCon > p select{ display:inline-block; width:100%; padding:0.25rem 0; border-bottom:1px solid #e8e8e8; color:#999;}
+.repair_addr_manager .wrapper .form .infoCon > p a{ display:inline-block; width:100%; padding:0.25rem 0; border-bottom:1px solid #e8e8e8; color:#999;}
+.repair_addr_manager .wrapper .form .infoCon > p:last-child select{ border:none; }
